fixed word-wrap bug

--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,7 @@ a{
 .title a{
     color: black;
     text-decoration: none;
+    word-wrap:break-word;
 }
 
 /* Show only the last 5 updates */
